Fix article categorization: Move performance-focused articles to Performance Optimization category

--- a/src/content/learn/advanced-optimization-techniques.mdx
+++ b/src/content/learn/advanced-optimization-techniques.mdx
@@ -3,7 +3,7 @@ title: "Advanced AI Optimization Techniques: Batching, Compression, and Intellig
 description: "Master advanced AI optimization techniques including request batching, model compression, intelligent fallback systems, and performance monitoring for maximum efficiency."
 publishedDate: "2024-12-15"
 readingTime: "15 minutes"
-category: "Advanced Techniques"
+category: "Performance Optimization"
 ---
 
 # Advanced AI Optimization Techniques
