--- a/src/content/learn/automatic-token-optimization.mdx
+++ b/src/content/learn/automatic-token-optimization.mdx
@@ -3,7 +3,7 @@ title: "Automatic Token Optimization: Reduce AI Costs with Smart Token Managemen
 description: "Learn how to automatically optimize token usage in AI models. Discover techniques for reducing input/output tokens, implementing smart truncation, and cutting costs by 30-70%."
 publishedDate: "2024-12-15"
 readingTime: "10 minutes"
-category: "Cost Optimization"
+category: "Performance Optimization"
 ---
 
 # Automatic Token Optimization
