--- a/src/content/learn/intelligent-model-selection.mdx
+++ b/src/content/learn/intelligent-model-selection.mdx
@@ -3,7 +3,7 @@ title: "Intelligent Model Selection: Choose the Right AI Model for Every Task"
 description: "Learn how to automatically select the optimal AI model for each task. Discover cost-performance trade-offs, model comparison strategies, and intelligent routing techniques."
 publishedDate: "2024-12-15"
 readingTime: "12 minutes"
-category: "Cost Optimization"
+category: "Performance Optimization"
 ---
 
 # Intelligent Model Selection
