--- a/src/content/learn/ai-model-reliability-best-practices.mdx
+++ b/src/content/learn/ai-model-reliability-best-practices.mdx
@@ -3,7 +3,7 @@ title: "AI Model Reliability Best Practices"
 description: "Master best practices for AI model reliability. Learn monitoring, redundancy, error handling, and deployment tips for robust AI systems."
 publishedDate: "2024-12-15"
 readingTime: "9 minutes"
-category: "Infrastructure & Tools"
+category: ["Infrastructure & Tools", "Performance Optimization", "Cost Optimization"]
 ---
 
 # AI Model Reliability Best Practices
