--- a/src/content/learn/ai-model-routing-load-balancing.mdx
+++ b/src/content/learn/ai-model-routing-load-balancing.mdx
@@ -3,7 +3,7 @@ title: "AI Model Routing and Load Balancing: Intelligent Request Distribution"
 description: "Master AI model routing and load balancing strategies. Learn intelligent routing algorithms, health checking, failover mechanisms, and performance optimization techniques."
 publishedDate: "2024-12-15"
 readingTime: "14 minutes"
-category: "Infrastructure & Tools"
+category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques"]
 ---
 
 # AI Model Routing and Load Balancing
