--- a/src/content/learn/api-gateway-ai-models.mdx
+++ b/src/content/learn/api-gateway-ai-models.mdx
@@ -3,7 +3,7 @@ title: "API Gateway for AI Models: Centralized Management and Control"
 description: "Learn how to build an API gateway for AI models. Master gateway architecture patterns, request transformation, authentication, rate limiting, and centralized management."
 publishedDate: "2024-12-15"
 readingTime: "13 minutes"
-category: "Infrastructure & Tools"
+category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques"]
 ---
 
 # API Gateway for AI Models
