--- a/src/content/learn/how-to-handle-ai-model-downtime.mdx
+++ b/src/content/learn/how-to-handle-ai-model-downtime.mdx
@@ -3,7 +3,7 @@ title: "How to Handle AI Model Downtime"
 description: "Learn practical steps to handle AI model downtime effectively. Master incident response, troubleshooting procedures, and operational best practices for AI service disruptions."
 publishedDate: "2024-12-15"
 readingTime: "10 minutes"
-category: "Infrastructure & Tools"
+category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques"]
 ---
 
 # How to Handle AI Model Downtime
