--- a/src/content/learn/unified-ai-model-management.mdx
+++ b/src/content/learn/unified-ai-model-management.mdx
@@ -3,7 +3,7 @@ title: "Unified AI Model Management: Centralized Architecture for Multiple Provi
 description: "Learn how to build a unified AI model management system that abstracts multiple providers behind a single API. Master provider abstraction patterns and centralized model management."
 publishedDate: "2024-12-15"
 readingTime: "12 minutes"
-category: "Infrastructure & Tools"
+category: ["Infrastructure & Tools", "Performance Optimization", "Cost Optimization"]
 ---
 
 # Unified AI Model Management
