--- a/src/content/learn/multi-provider-ai-failover.mdx
+++ b/src/content/learn/multi-provider-ai-failover.mdx
@@ -3,7 +3,7 @@ title: "Multi-Provider AI Failover"
 description: "Master multi-provider AI failover strategies. Learn advanced patterns for switching between OpenAI, Anthropic, Google, and other AI providers seamlessly."
 publishedDate: "2024-12-15"
 readingTime: "12 minutes"
-category: "Infrastructure & Tools"
+category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques"]
 ---
 
 # Multi-Provider AI Failover
