--- a/src/content/learn/ai-api-fallback-implementation.mdx
+++ b/src/content/learn/ai-api-fallback-implementation.mdx
@@ -3,7 +3,7 @@ title: "AI API Fallback Implementation"
 description: "Learn practical AI API fallback implementation patterns. Master code examples, error handling, and real-world scenarios for robust AI applications."
 publishedDate: "2024-12-15"
 readingTime: "10 minutes"
-category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques"]
+category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques", "Resiliency"]
 ---
 
 # AI API Fallback Implementation
