--- a/src/content/learn/ai-model-error-handling-techniques.mdx
+++ b/src/content/learn/ai-model-error-handling-techniques.mdx
@@ -3,7 +3,7 @@ title: "AI Model Error Handling Techniques"
 description: "Master AI model error handling techniques. Learn retry mechanisms, graceful degradation, and implementation patterns for robust AI applications."
 publishedDate: "2024-12-15"
 readingTime: "11 minutes"
-category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques"]
+category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques", "Resiliency"]
 ---
 
 # AI Model Error Handling Techniques
