--- a/src/content/learn/ai-model-error-recovery.mdx
+++ b/src/content/learn/ai-model-error-recovery.mdx
@@ -3,7 +3,7 @@ title: "AI Model Error Recovery"
 description: "Master AI model error recovery strategies. Learn comprehensive error handling, recovery mechanisms, and best practices for managing AI model failures and errors."
 publishedDate: "2024-12-15"
 readingTime: "11 minutes"
-category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques"]
+category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques", "Resiliency"]
 ---
 
 # AI Model Error Recovery
