--- a/src/content/learn/ai-model-failover-strategies.mdx
+++ b/src/content/learn/ai-model-failover-strategies.mdx
@@ -3,7 +3,7 @@ title: "AI Model Failover Strategies"
 description: "Learn proven strategies for AI model failover. Ensure reliability and uptime with multi-provider, fallback, and redundancy techniques."
 publishedDate: "2024-12-15"
 readingTime: "10 minutes"
-category: ["Infrastructure & Tools", "Performance Optimization", "Cost Optimization", "Advanced Techniques"]
+category: ["Infrastructure & Tools", "Performance Optimization", "Cost Optimization", "Advanced Techniques", "Resiliency"]
 ---
 
 # AI Model Failover Strategies
