--- a/src/content/learn/ai-model-maintenance-procedures.mdx
+++ b/src/content/learn/ai-model-maintenance-procedures.mdx
@@ -3,7 +3,7 @@ title: "AI Model Maintenance Procedures"
 description: "Master AI model maintenance procedures and update strategies. Learn systematic approaches to maintaining AI models in production, including updates, optimization, and lifecycle management."
 publishedDate: "2024-12-15"
 readingTime: "12 minutes"
-category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques"]
+category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques", "Resiliency"]
 ---
 
 # AI Model Maintenance Procedures
