--- a/src/content/learn/ai-model-operations-guide.mdx
+++ b/src/content/learn/ai-model-operations-guide.mdx
@@ -3,7 +3,7 @@ title: "AI Model Operations Guide"
 description: "Master AI model operations with comprehensive procedures, monitoring, and maintenance strategies. Learn production-ready operational practices for managing AI services effectively."
 publishedDate: "2024-12-15"
 readingTime: "13 minutes"
-category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques"]
+category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques", "Resiliency"]
 ---
 
 # AI Model Operations Guide
