--- a/src/content/learn/ai-model-performance-troubleshooting.mdx
+++ b/src/content/learn/ai-model-performance-troubleshooting.mdx
@@ -3,7 +3,7 @@ title: "AI Model Performance Troubleshooting"
 description: "Master AI model performance troubleshooting techniques. Learn systematic approaches, performance analysis, and optimization strategies for resolving AI performance issues."
 publishedDate: "2024-12-15"
 readingTime: "12 minutes"
-category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques"]
+category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques", "Resiliency"]
 ---
 
 # AI Model Performance Troubleshooting
