--- a/src/content/learn/improving-ai-model-uptime.mdx
+++ b/src/content/learn/improving-ai-model-uptime.mdx
@@ -3,7 +3,7 @@ title: "Improving AI Model Uptime"
 description: "Master strategies to improve AI model uptime and reliability. Learn monitoring techniques, proactive maintenance, and best practices for maximizing AI service availability."
 publishedDate: "2024-12-15"
 readingTime: "11 minutes"
-category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques"]
+category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques", "Resiliency"]
 ---
 
 # Improving AI Model Uptime
