--- a/src/content/learn/load-balancing-for-ai-models.mdx
+++ b/src/content/learn/load-balancing-for-ai-models.mdx
@@ -3,7 +3,7 @@ title: "Load Balancing for AI Models"
 description: "Master load balancing strategies for AI models. Learn algorithms, implementation patterns, and best practices for distributing AI requests across multiple providers."
 publishedDate: "2024-12-15"
 readingTime: "11 minutes"
-category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques"]
+category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques", "Resiliency"]
 ---
 
 # Load Balancing for AI Models
