--- a/src/content/learn/monitoring-ai-model-health.mdx
+++ b/src/content/learn/monitoring-ai-model-health.mdx
@@ -3,7 +3,7 @@ title: "Monitoring AI Model Health"
 description: "Master AI model health monitoring strategies. Learn metrics, alerting, and implementation patterns for comprehensive AI system monitoring."
 publishedDate: "2024-12-15"
 readingTime: "12 minutes"
-category: ["Infrastructure & Tools", "Performance Optimization", "Cost Optimization"]
+category: ["Infrastructure & Tools", "Performance Optimization", "Cost Optimization", "Resiliency"]
 ---
 
 # Monitoring AI Model Health
