--- a/src/content/learn/redundancy-in-ai-model-deployments.mdx
+++ b/src/content/learn/redundancy-in-ai-model-deployments.mdx
@@ -3,7 +3,7 @@ title: "Redundancy in AI Model Deployments"
 description: "Master redundancy strategies for AI model deployments. Learn deployment patterns, infrastructure design, and best practices for high-availability AI systems."
 publishedDate: "2024-12-15"
 readingTime: "13 minutes"
-category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques"]
+category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques", "Resiliency"]
 ---
 
 # Redundancy in AI Model Deployments
