--- a/src/content/learn/automatic-fallback-for-ai-models.mdx
+++ b/src/content/learn/automatic-fallback-for-ai-models.mdx
@@ -3,7 +3,7 @@ title: "Automatic Fallback for AI Models"
 description: "Discover how to implement automatic fallback for AI models. Learn code patterns and real-world examples to keep your AI apps running."
 publishedDate: "2024-12-15"
 readingTime: "8 minutes"
-category: ["Infrastructure & Tools", "Performance Optimization", "Cost Optimization"]
+category: ["Infrastructure & Tools", "Performance Optimization", "Cost Optimization", "Resiliency"]
 ---
 
 # Automatic Fallback for AI Models
