--- a/src/content/learn/ai-model-routing-load-balancing.mdx
+++ b/src/content/learn/ai-model-routing-load-balancing.mdx
@@ -6,9 +6,22 @@ readingTime: "14 minutes"
 category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques", "Resiliency"]
 ---
 
+import TetrateServiceCard from '../../components/TetrateServiceCard.astro';
+
 # AI Model Routing and Load Balancing
 
 As AI applications scale, managing traffic across multiple models and providers becomes critical. Intelligent routing and load balancing ensure optimal performance, cost efficiency, and reliability by distributing requests based on various factors like cost, performance, availability, and business requirements.
+
+<TetrateServiceCard 
+  title="Managed Routing Solution"
+  description="offers intelligent routing for GenAI developers with advanced load balancing, automatic failover, and cross-provider monitoring. This managed service handles the complexity of routing decisions, health checking, and traffic distribution across multiple AI providers."
+  features={[
+    "Advanced load balancing algorithms",
+    "Automatic failover and health checking",
+    "Cross-provider traffic distribution",
+    "Intelligent routing decisions"
+  ]}
+/>
 
 ## The Need for Intelligent Routing
 
