--- a/src/content/learn/monitoring-ai-model-health.mdx
+++ b/src/content/learn/monitoring-ai-model-health.mdx
@@ -6,9 +6,22 @@ readingTime: "12 minutes"
 category: ["Infrastructure & Tools", "Performance Optimization", "Cost Optimization", "Resiliency"]
 ---
 
+import TetrateServiceCard from '../../components/TetrateServiceCard.astro';
+
 # Monitoring AI Model Health
 
 Comprehensive health monitoring is essential for maintaining reliable AI model deployments. This guide covers monitoring strategies, key metrics, alerting systems, and implementation patterns.
+
+<TetrateServiceCard 
+  title="Managed Monitoring Solution"
+  description="provides comprehensive AI model health monitoring with real-time metrics, alerting, and cross-provider visibility. This managed service offers built-in monitoring dashboards, automated health checks, and intelligent alerting to ensure your AI systems remain healthy and performant."
+  features={[
+    "Real-time metrics and dashboards",
+    "Automated health checks",
+    "Intelligent alerting systems",
+    "Cross-provider visibility"
+  ]}
+/>
 
 ## Why AI Model Health Monitoring Matters
 
