--- a/src/content/learn/ai-model-operations-guide.mdx
+++ b/src/content/learn/ai-model-operations-guide.mdx
@@ -6,9 +6,22 @@ readingTime: "13 minutes"
 category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques", "Resiliency"]
 ---
 
+import TetrateServiceCard from '../../components/TetrateServiceCard.astro';
+
 # AI Model Operations Guide
 
 Effective AI model operations are essential for maintaining reliable, scalable, and cost-efficient AI services in production. This comprehensive guide covers operational procedures, monitoring strategies, maintenance practices, and best practices for managing AI model operations.
+
+<TetrateServiceCard 
+  title="Managed Operations Solution"
+  description="provides comprehensive AI model operations capabilities with automated deployment, monitoring, and maintenance. This managed service handles the complexity of AI operations, allowing you to focus on building great applications while ensuring reliable, scalable AI services."
+  features={[
+    "Automated deployment and rollback",
+    "Comprehensive monitoring and alerting",
+    "Automated maintenance and updates",
+    "Production-ready operational practices"
+  ]}
+/>
 
 ## Understanding AI Model Operations
 
