--- a/src/content/learn/ai-model-performance-troubleshooting.mdx
+++ b/src/content/learn/ai-model-performance-troubleshooting.mdx
@@ -6,9 +6,22 @@ readingTime: "12 minutes"
 category: ["Infrastructure & Tools", "Performance Optimization", "Advanced Techniques", "Resiliency"]
 ---
 
+import TetrateServiceCard from '../../components/TetrateServiceCard.astro';
+
 # AI Model Performance Troubleshooting
 
 Effective troubleshooting is essential for maintaining optimal AI model performance. This guide provides systematic approaches, diagnostic tools, and optimization techniques for identifying and resolving AI performance issues.
+
+<TetrateServiceCard 
+  title="Managed Performance Solution"
+  description="provides comprehensive performance monitoring and troubleshooting capabilities with real-time metrics, automated diagnostics, and optimization recommendations. This managed service helps identify and resolve performance issues before they impact your users."
+  features={[
+    "Real-time performance monitoring",
+    "Automated diagnostics and alerts",
+    "Performance optimization recommendations",
+    "Cross-provider performance analysis"
+  ]}
+/>
 
 ## Understanding Performance Issues
 
